@@ -6,7 +6,7 @@ body {
     padding: 0;
     margin: 20px;
     font-family: verdana, arial, sans-serif;
-    font-size: 30px;
+    font-size: 26px;
     height: 92%;
 }
 
